--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "self-ui4",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.4",
+  "description": "演示组件库2",
+  "main": "dist/index.umd.js",
+  "keywords": [
+    "self-ui4",
+    "vue",
+    "ui"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "npm run build.js && npm run build.css",
+    "build.js": "webpack --config ./webpack.component.js",
+    "build.css": "npx gulp sass",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gulp": "^4.0.2",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^5.1.0",
+    "self-ui4": "^0.2.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -17,9 +31,12 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "sass": "^1.26.5",
+    "babel-plugin-import": "^1.13.3",
+    "sass": "^1.49.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.9.7",
+    "webpack-cli": "^4.9.1"
   },
   "browserslist": [
     "> 1%",
